test/fixtures/public/fail/semantic/funcNotFound.jmm
/*  REASON:
    Call to method of the class being compiled that does not exist.
*/

class T {
    public static void main(String[] a) { 
        io.println(10);
    }

    public int foo(boolean a){
        this.bar();
        return 1;
    }
}
